<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gestionm">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="21dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="21dp"
                android:text="@string/title"
                android:textAlignment="center"
                android:textColor="#5A479F"
                android:textSize="34sp"
                android:background="#2329"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etcodigoMS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="21dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="21dp"
                android:ems="10"
                android:hint="@string/Código"
                android:inputType="textPersonName"
                android:textColorHint="#78909C"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2"
                tools:layout_editor_absoluteX="100dp"
                android:autofillHints="" />

            <EditText
                android:id="@+id/etnombreMS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="21dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="21dp"
                android:ems="10"
                android:hint="@string/Nombre"
                android:inputType="textPersonName"
                android:textColorHint="#78909C"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="120dp"
                tools:layout_editor_absoluteY="90dp"
                android:autofillHints="" />

            <EditText
                android:id="@+id/precioMS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="21dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="21dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/Password"
                android:inputType="text|numberDecimal"
                android:textColorHint="#78909C"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="DuplicateSpeakableTextCheck"
                tools:layout_editor_absoluteX="120dp"
                tools:layout_editor_absoluteY="90dp" />


            <Button
                android:id="@+id/btnCrear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:insetLeft="21dp"
                android:insetRight="21dp"
                android:text="@string/Crear"
                android:textSize="24sp"
                android:textStyle="bold"
                app:cornerRadius="30dp"
                app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal"
                tools:layout_editor_absoluteX="149dp" />

            <Button
                android:id="@+id/btnModificar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:insetLeft="21dp"
                android:insetRight="21dp"
                android:text="@string/Modificar"
                android:textSize="24sp"
                android:textStyle="bold"
                app:cornerRadius="30dp"
                app:layout_constraintTop_toBottomOf="@+id/button"
                tools:layout_editor_absoluteX="135dp" />

            <Button
                android:id="@+id/btnBuscar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:insetLeft="21dp"
                android:insetRight="21dp"
                android:text="@string/Buscar"
                android:textSize="24sp"
                android:textStyle="bold"
                app:cornerRadius="30dp"
                app:layout_constraintTop_toBottomOf="@+id/button2"
                tools:layout_editor_absoluteX="120dp" />

            <Button
                android:id="@+id/btnListarMS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:insetLeft="21dp"
                android:insetRight="21dp"
                android:text="@string/Listar"
                android:textSize="24sp"
                android:textStyle="bold"
                app:cornerRadius="30dp"
                app:layout_constraintTop_toBottomOf="@+id/button2"
                tools:layout_editor_absoluteX="120dp" />

            <Button
                android:id="@+id/btnEliminar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:insetLeft="21dp"
                android:insetRight="21dp"
                android:text="@string/Eliminar"
                android:textSize="24sp"
                android:textStyle="bold"
                app:cornerRadius="30dp"
                app:layout_constraintTop_toBottomOf="@+id/button3"
                tools:layout_editor_absoluteX="108dp" />
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>